--- a/math.html
+++ b/math.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CodeMirror: Variable Height Demo</title>
+    <title>attempt at CodeMirror + in-place MathJax</title>
     <link rel="stylesheet" href="CodeMirror/lib/codemirror.css">
     <script src="CodeMirror/lib/codemirror.js"></script>
     <script src="CodeMirror/mode/markdown/markdown.js"></script>
@@ -14,32 +14,26 @@
       .cm-header { font-size: 150%; font-family: arial; }
       .cm-strong { font-size: 140%; }
     </style>
+
+    <script type="text/javascript" src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
+
+    <!-- I'm a JS noob, so jQuery is my only hope of writing somewhat portable code ;-).
+         Drop ".min" to get non-minified source for debugging. -->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+
   </head>
   <body>
-    <h1>CodeMirror: Variable Height Demo</h1>
+    <h1>attempt at CodeMirror + in-place MathJax</h1>
 
     <form><textarea id="code" name="code"># A First Level Header
 
 **Bold** text in a normal-size paragraph.
 
-And a very long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long, wrapped line with a piece of **big** text inside of it.
+Foo $sum^y_z x$ bar.
 
 ## A Second Level Header
 
-Now is the time for all good men to come to
-the aid of their country. This is just a
-regular paragraph.
-
-The quick brown fox jumped over the lazy
-dog's back.
-
-### Header 3
-
-> This is a blockquote.
-> 
-> This is the second paragraph in the blockquote.
->
-> ## This is an H2 in a blockquote       
+$$\sum^b_c a$$
 </textarea></form>
     <script id="script">
       var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
@@ -59,6 +53,8 @@ dog's back.
         console.log("change", changeObj);
         window.ccc = changeObj;
       });
-</script>
+
+      //Mathjax.Hub.Queue(["Typeset", Mathjax.Hub, ...]);
+    </script>
   </body>
 </html>
