--- a/math.html
+++ b/math.html
@@ -45,26 +45,43 @@ Foo $\sum^y_z x$ bar.
 $$\sum^b_c a$$
 </textarea></form>
     <script id="script">
+      "use strict";
+
       var editor = CodeMirror.fromTextArea(document.getElementById("code"),
                                            {lineNumbers: true,
                                             lineWrapping: true,
                                             mode: "markdown"});
       var doc = editor.getDoc();
-      window.eee = editor;
 
-      function render(from, to) {
+      function processMath(from, to) {
         var text = editor.getRange(from, to);
         var elem = $("<span>").text(text)[0];
-        console.log("render", text, elem);
+        console.log("processMath", text, elem);
         MathJax.Hub.Queue(["Typeset", MathJax.Hub, elem]);
         MathJax.Hub.Queue(function() {
           doc.markText(from, to, {replacedWith: elem,
                                   clearOnEnter: true});
         });
       }
+      /*
+      processMath({line: 4, ch: 4}, {line: 4, ch: 16});
+      processMath({line: 8, ch: 0}, {line: 8, ch: 14});
+      */
 
-      render({line: 4, ch: 4}, {line: 4, ch: 16});
-      render({line: 8, ch: 0}, {line: 8, ch: 14});
+      function processLine(line, text) {
+        console.log(line, text);
+        var inline = /\$.+\$/g; // TODO: tighten, display math
+        var match;
+        while((match = inline.exec(text)) != null) {
+          var fromCh = match.index;
+          var toCh = fromCh + match[0].length;
+          processMath({line: line, ch: fromCh}, {line: line, ch: toCh});
+        }
+      }
+
+      doc.eachLine(function(lineHandle) {
+        processLine(doc.getLineNumber(lineHandle), lineHandle.text);
+      });
 
       editor.on("renderLine", function(editor, line, element) {
         console.log("renderLine", line, element);
@@ -75,10 +92,6 @@ $$\sum^b_c a$$
         console.log("change", changeObj);
         window.ccc = changeObj;
       });
-
-
-      
-      //Mathjax.Hub.Queue(["Typeset", Mathjax.Hub, ...]);
     </script>
   </body>
 </html>
