--- a/demo.html
+++ b/demo.html
@@ -16,6 +16,7 @@
     </style>
 
     <script type="text/javascript" src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
+    <script type="text/javascript" src="file:///usr/share/javascript/mathjax/unpacked/MathJax.js?config=TeX-AMS_HTML"></script>
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         tex2jax: {
@@ -29,7 +30,7 @@
     <!-- I'm a JS noob, so jQuery is my only hope of writing somewhat portable code ;-).
          Drop ".min" to get non-minified source for debugging. -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-
+    <script type="text/javascript" src="file:///usr/share/javascript/jquery/jquery.js"></script>
   </head>
   <body>
     <h1>attempt at CodeMirror + in-place MathJax</h1>
