Fix event binding on range (.on has to be called as class method). range.find() not available after clearing, so bind beforeCursorEnter instead and trigger clear() manually.
Now works but slow - re-renders too much.

--- a/demo.html
+++ b/demo.html
@@ -82,11 +82,11 @@ $$\sum^b_c a$$
             unrenderedMath = doc.markText(from, to);
           } else {
             var range = doc.markText(from, to, {replacedWith: elem,
-                                                clearOnEnter: true});
-            editor.on(range, "clear", function() {
-              console.log("clear", range);
+                                                clearOnEnter: false});
+            CodeMirror.on(range, "beforeCursorEnter", function() {
               var fromTo = range.find();
-              console.log("clear", fromTo);
+              console.log("beforeCursorEnter", fromTo, range);
+              range.clear();
               unrenderedMath = doc.markText(fromTo.from, fromTo.to);
             });
           }
@@ -136,7 +136,7 @@ $$\sum^b_c a$$
           return;
         }
         processMath(range.from, range.to);
-        //unrenderedMath = false;
+        unrenderedMath = null;
       });
 
       doc.eachLine(processLine);
