--- a/demo.html
+++ b/demo.html
@@ -16,7 +16,7 @@
     </style>
 
     <script type="text/javascript" src="file:///usr/share/javascript/mathjax/unpacked/MathJax.js?config=TeX-AMS_HTML"></script>
-    <script> MathJax || document.write(
+    <script> window.MathJax || document.write(
       '<script type="text/javascript" src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"><\/script>');
     </script>
 
@@ -33,7 +33,7 @@
     <!-- I'm a JS noob, so jQuery is my only hope of writing somewhat portable code ;-).
          Drop ".min" to get non-minified source for debugging. -->
     <script type="text/javascript" src="file:///usr/share/javascript/jquery/jquery.js"></script>
-    <script> jQuery || document.write(
+    <script> window.jQuery || document.write(
       '<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.1/jquery.min.js"><\/script>');
     </script>
   </head>
