--- a/demo.html
+++ b/demo.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="CodeMirror/doc/docs.css">
 
     <style type="text/css">
-      .CodeMirror {border: 1px solid silver; border-width: 1px 2px; }
-      .cm-header { font-size: 150%; font-family: arial; }
-      .cm-strong { font-size: 140%; }
+      .CodeMirror { border: 1px solid silver; border-width: 1px 2px; }
+      .CodeMirror { font-family: sans-serif; }
+      .cm-header { font-size: 150%; }
     </style>
 
     <script type="text/javascript" src="file:///usr/share/javascript/mathjax/unpacked/MathJax.js?config=TeX-AMS_HTML"></script>
@@ -42,7 +42,7 @@
 
     <form><textarea id="code" name="code"># A First Level Header
 
-**Bold** text in a normal-size paragraph.
+**Bold** and *italic* text in a normal paragraph.
 
 Foo $\sum^y_z x$ bar.
 
