--- a/demo.html
+++ b/demo.html
@@ -104,7 +104,7 @@ $$\sum^b_c a$$
         var line = doc.getLineNumber(lineHandle);
         console.log("processLine", line, text);
 
-        var inline = /\$.+\$/g; // TODO: tighten, display math
+        var inline = /\$.+?\$/g; // TODO: tighten, display math
         var match;
         while((match = inline.exec(text)) != null) {
           var fromCh = match.index;
