--- a/demo.html
+++ b/demo.html
@@ -56,7 +56,8 @@ $$\sum^b_c a$$
       var editor = CodeMirror.fromTextArea(document.getElementById("code"),
                                            {lineNumbers: true,
                                             lineWrapping: true,
-                                            mode: "markdown"});
+                                            mode: {name: "markdown",
+                                                   underscoresBreakWords: false}});
       var doc = editor.getDoc();
 
       // Return negative / 0 / positive.
