Add line with simple formulas.

--- a/demo.html
+++ b/demo.html
@@ -51,9 +51,10 @@
 
     <form><textarea id="code" name="code"># A First Level Header
 
-**Bold** and *italic* text in a normal paragraph.
-
-**Bold** text in a normal-size paragraph.
+xXxXxXxXxXxXxXxXxXxXxXxX
+**Bold** and *italic* text in a normal line that is long enough to wrap, long enough to wrap, long enough to wrap, long enough to wrap.
+xXxXxXxXxXxXxXxXxXxXxXxX
+Normal-size line with $n$ compact formulas: $\sin x$.
 xXxXxXxXxXxXxXxXxXxXxXxX
 Foo $\sum^y_z \frac{1}{x}$ bar.
 xXxXxXxXxXxXxXxXxXxXxXxX
