--- a/demo.html
+++ b/demo.html
@@ -51,7 +51,7 @@
   <body>
     <h1>attempt at CodeMirror + in-place MathJax</h1>
 
-    <form><textarea id="code"># Inline math
+    <form><textarea id="code" autofocus># Inline math
 xXxXxXxXxXxXxXxXxXxXxXxX
 Normal-size line with $n$ compact formulas: $\sin x$.
 xXxXxXxXxXxXxXxXxXxXxXxX
