--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
     <script src="render-math.js"></script>
 
     <link rel="stylesheet" href="CodeMirror/lib/codemirror.css">
-    <style type="text/css">
+    <style>
       /* Expand editor to fit most of the page. */
       html, body, form, textarea, .CodeMirror {
         height: 100%; width: 100%;
