Support \(..\) and \[..\].  Tighter $$..$$ pattern, still imperfect.

--- a/demo.html
+++ b/demo.html
@@ -53,9 +53,9 @@
 
     <form><textarea id="code" autofocus># Inline math
 xXxXxXxXxXxXxXxXxXxXxXxX
-Normal-size line with $n$ compact formulas: $\sin x$.
+Normal-size line with $n = 2$ compact formulas: $\sin x$.
 xXxXxXxXxXxXxXxXxXxXxXxX
-Foo $\sum^y_z \frac{1}{x}$ bar.
+Foo \(\sum^y_z \frac{1}{x}\) bar.
 xXxXxXxXxXxXxXxXxXxXxXxX
 # Display math
 xXxXxXxXxXxXxXxXxXxXxXxX
