Load most of mathjax immediately instead of on demand. Config mathjax before loading it (as required by docs).

--- a/demo.html
+++ b/demo.html
@@ -37,7 +37,6 @@
       /* .MathJax { padding-top: 10%; padding-bottom: 10%; } */
     </style>
 
-    <script src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         tex2jax: {
@@ -47,6 +46,7 @@
         },
       });
     </script>
+    <script src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full"></script>
   </head>
   <body>
     <h1>attempt at CodeMirror + in-place MathJax</h1>
