Style math according to surrounding context (heading, list etc.). Might not always be accurate, but seems to work well enough since we re-render whole lines.

--- a/demo.html
+++ b/demo.html
@@ -51,7 +51,7 @@
   <body>
     <h1>attempt at CodeMirror + in-place MathJax</h1>
 
-    <form><textarea id="code" autofocus># Inline math
+    <form><textarea id="code" autofocus># Inline math $2^n$
 xXxXxXxXxXxXxXxXxXxXxXxX
 Normal-size line with $n = 2$ compact formulas: $\sin x$.
 xXxXxXxXxXxXxXxXxXxXxXxX
