better demo of formulas styled according to context. (shows bug in line 10 - not styled if formula is first text in line.)

--- a/demo.html
+++ b/demo.html
@@ -44,13 +44,13 @@
     <a href="https://github.com/cben/CodeMirror-MathJax">Source on github</a>
 
     <form><textarea id="code" autofocus># Inline math $2^n$
-xXxXxXxXxXxXxXxXxXxXxXxX
+> xXxXxXxXxXxXxXxXxXxXxXxX
 Normal-size line with $n = 2$ compact formulas: $\sin x$.
 xXxXxXxXxXxXxXxXxXxXxXxX
-Foo \(\sum^y_z \frac{1}{x}\) bar.
+>> Foo \(\sum^y_z \frac{1}{x}\) bar.
 xXxXxXxXxXxXxXxXxXxXxXxX
 # Display math
-xXxXxXxXxXxXxXxXxXxXxXxX
+> xXxXxXxXxXxXxXxXxXxXxXxX
 $$\sum^b_c \frac{1}{a}$$
 xXxXxXxXxXxXxXxXxXxXxXxX
 
