Demonstrate that display math inside monospace is ugly.

--- a/demo.html
+++ b/demo.html
@@ -53,11 +53,6 @@ xXxXxXxXxXxXxXxXxXxXxXxX
 >> Foo \(\sum^y_z \frac{1}{x}\) bar.
 xXxXxXxXxXxXxXxXxXxXxXxX
 
-## In monospace
-    xXxXxXxXxXxXxXxXxXxXxXxX
-    >> Foo \(\sum^y_z \frac{1}{x}\) bar.
-    xXxXxXxXxXxXxXxXxXxXxXxX
-
 # Display math
 > xXxXxXxXxXxXxXxXxXxXxXxX
 $$\sum^b_c \frac{1}{a}$$
@@ -65,6 +60,13 @@ xXxXxXxXxXxXxXxXxXxXxXxX
 
 ## Maxwell's Equations
 \[ \begin{aligned}   \nabla \times \vec{\mathbf{B}} -\, \frac1c\, \frac{\partial\vec{\mathbf{E}}}{\partial t} & = \frac{4\pi}{c}\vec{\mathbf{j}} \\   \nabla \cdot \vec{\mathbf{E}} & = 4 \pi \rho \\   \nabla \times \vec{\mathbf{E}}\, +\, \frac1c\, \frac{\partial\vec{\mathbf{B}}}{\partial t} & = \vec{\mathbf{0}} \\   \nabla \cdot \vec{\mathbf{B}} & = 0 \end{aligned} \]
+
+# In monospace
+    xXxXxXxXxXxXxXxXxXxXxXxX
+    >> Foo \(\sum^y_z \frac{1}{x}\) bar.
+    xXxXxXxXxXxXxXxXxXxXxXxX
+    $$\sum^b_c \frac{1}{a}$$
+    xXxXxXxXxXxXxXxXxXxXxXxX
 </textarea></form>
     <script>
       var editor = CodeMirror.fromTextArea(document.getElementById("code"),
