--- a/demo.html
+++ b/demo.html
@@ -43,7 +43,9 @@
         },
       });
     </script>
-    <script src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full"></script>
+    <!-- Safe extension (http://docs.mathjax.org/en/latest/safe-mode.html)
+         only needed if editor content may be controlled by other users. -->
+    <script src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full,Safe"></script>
   </head>
   <body>
     <h1>attempt at CodeMirror + in-place MathJax</h1>
