--- a/demo.html
+++ b/demo.html
@@ -55,7 +55,7 @@
 > xXxXxXxXxXxXxXxXxXxXxXxX
 Normal-size line with $n = 2$ compact formulas: $\sin x$.
 xXxXxXxXxXxXxXxXxXxXxXxX
->> Foo \(\sum^y_z \frac{1}{x}\) bar.
+>> Foo \(\sum^{y}_{z} \frac{1}{x}\) bar.  There was a `_` in that formula but this text should not be italic.
 xXxXxXxXxXxXxXxXxXxXxXxX
 
 # Display math
