--- a/demo.html
+++ b/demo.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>attempt at CodeMirror + in-place MathJax</title>
-    <script src="CodeMirror/lib/codemirror.js"></script>
-    <script src="CodeMirror/mode/markdown/markdown.js"></script>
 
+    <script src="CodeMirror/lib/codemirror.js"></script>
+    <!-- load render-math.js early to verify its dependencies are at
+         call time and not load time -->
     <script src="render-math.js"></script>
+    <script src="CodeMirror/addon/mode/multiplex.js"></script>
+    <script src="CodeMirror/mode/stex/stex.js"></script>
+    <script src="CodeMirror/mode/markdown/markdown.js"></script>
 
     <link rel="stylesheet" href="CodeMirror/lib/codemirror.css">
     <style>
@@ -74,11 +78,12 @@ xXxXxXxXxXxXxXxXxXxXxXxX
     xXxXxXxXxXxXxXxXxXxXxXxX
 </textarea></form>
     <script>
+      CodeMirror.defineMathMode("markdown+math", {name: "markdown",
+                                                  underscoresBreakWords: false});
       var editor = CodeMirror.fromTextArea(document.getElementById("code"),
                                            {lineNumbers: true,
                                             lineWrapping: true,
-                                            mode: {name: "markdown",
-                                                   underscoresBreakWords: false}});
+                                            mode: "markdown+math"});
       CodeMirror.renderMath(editor, MathJax);
     </script>
   </body>
