[demo] Show MJ error messages for easier debugging.

--- a/demo.html
+++ b/demo.html
@@ -45,6 +45,7 @@
           displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
           processEscapes: true
         },
+        TeX: { noErrors: { disabled: true } }
       });
     </script>
     <!-- Safe extension (http://docs.mathjax.org/en/latest/safe-mode.html)
