**API change**: separate hookMath() for hooking change events and editor.renderAllMath() to render existing content.
hookMath() is cheap.
renderAllMath() is still slow and freezes the editor (#14).
So is pasting lots of text with math.

--- a/demo.html
+++ b/demo.html
@@ -94,7 +94,8 @@ xXxXxXxXxXxXxXxXxXxXxXxX
                                            {lineNumbers: true,
                                             lineWrapping: true,
                                             mode: "markdown+math"});
-      CodeMirror.renderMath(editor, MathJax);
+      CodeMirror.hookMath(editor, MathJax);
+      editor.renderAllMath();
     </script>
   </body>
 </html>
