[demo] Clarify how to edit formulas.

--- a/demo.html
+++ b/demo.html
@@ -65,7 +65,9 @@
     <h1>attempt at CodeMirror + in-place MathJax</h1>
     <a href="https://github.com/cben/CodeMirror-MathJax">Source on github</a>
 
-    <form><textarea id="code" autofocus># Inline math $2^n$
+    <form><textarea id="code" autofocus>**To edit formulas, move cursor into them with arrow keys.**  Clicking with mouse should work but currently doesn't.
+
+# Inline math $2^n$
 > xXxXxXxXxXxXxXxXxXxXxXxX
 Normal-size line with $n = 2$ compact formulas: $\sin x$.
 xXxXxXxXxXxXxXxXxXxXxXxX
