--- a/demo-v4.html
+++ b/demo-v4.html
@@ -85,6 +85,10 @@ xXxXxXxXxXxXxXxXxXxXxXxX
 ## Maxwell's Equations
 \begin{aligned}   \nabla \times \vec{\mathbf{B}} -\, \frac1c\, \frac{\partial\vec{\mathbf{E}}}{\partial t} & = \frac{4\pi}{c}\vec{\mathbf{j}} \\   \nabla \cdot \vec{\mathbf{E}} & = 4 \pi \rho \\   \nabla \times \vec{\mathbf{E}}\, +\, \frac1c\, \frac{\partial\vec{\mathbf{B}}}{\partial t} & = \vec{\mathbf{0}} \\   \nabla \cdot \vec{\mathbf{B}} & = 0 \end{aligned}
 
+# Defining macros
+Define \foo: \newcommand{\foo}{f_0^0}
+Use \foo: $\foo$
+
 # In monospace
     xXxXxXxXxXxXxXxXxXxXxXxX
     >> Foo \(\sum^y_z \frac{1}{x}\) bar.
