Demonstrate that < in formulas is already handled correctly.  Closes #20 - not a bug.

--- a/demo-v4.html
+++ b/demo-v4.html
@@ -69,7 +69,7 @@
 
     <form><textarea id="code" autofocus>**To edit formulas, move cursor into them with arrow keys.**  Clicking with mouse should work but currently doesn't :-(.
 
-# Inline math $2^n$
+# Inline math $a&lt;b&gt;c$
 > xXxXxXxXxXxXxXxXxXxXxXxX
 Normal-size line with $n = 2$ compact formulas: $\sin x$.
 xXxXxXxXxXxXxXxXxXxXxXxX
