Test new MathJax CDN in demo page. [https://groups.google.com/d/msg/mathjax-users/Nx42MFg8D9c/M5X6xrV14M4J]
Should make no difference, I'm just abusing this project to test it.

--- a/demo-v4.html
+++ b/demo-v4.html
@@ -61,7 +61,7 @@
     </script>
     <!-- Safe extension (http://docs.mathjax.org/en/latest/safe-mode.html)
          only needed if editor content may be controlled by other users. -->
-    <script src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full,Safe"></script>
+    <script src="https://mathjax-cdn.storage.googleapis.com/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full,Safe"></script>
   </head>
   <body>
     <h1>attempt at CodeMirror + in-place MathJax</h1>
