--- a/demo-v4.html
+++ b/demo-v4.html
@@ -62,7 +62,7 @@
     </script>
     <!-- Safe extension (http://docs.mathjax.org/en/latest/safe-mode.html)
          only needed if editor content may be controlled by other users. -->
-    <script src="https://mathjax-cdn.storage.googleapis.com/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full,Safe"></script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full,Safe"></script>
   </head>
   <body>
     <h1>attempt at CodeMirror + in-place MathJax</h1>
